--- a/style.css
+++ b/style.css
@@ -128,3 +128,9 @@ table, th,td{
 	width: auto;
 
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+  }
